[tool.mypy]
exclude = [
    'venv',
    '.venv',
    '.github',
    'env',
    '.env',
    'tests',
]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short -s -v -p no:cacheprovider"

[tool.coverage.run]
omit = [
    "src/tests/*",
    "src/core/*",
    "src/db/*",
    "src/schemas/*",
    "__init__.py",
]

[tool.poetry]
name = "async-python-sprint-4"
version = "0.1.0"
description = ""
authors = ["Nikita Fomin <fominquant@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
uvloop = "^0.17.0"
asyncpg = "^0.28.0"
sqlalchemy = "^1.4"
sqlalchemy-utils = "^0.41.1"
dependency-injector = "^4.41.0"
orjson = "^3.9.9"
email-validator = "^2.0.0.post2"
pydantic-settings = "^2.0.3"
pyyaml = "^6.0.1"
python-multipart = "^0.0.6"
itsdangerous = "^2.1.2"
pydantic-extra-types = "^2.1.0"
greenlet = "^3.0.0"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.6.0"
flake8 = "^6.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
